--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_portal",
+  "name": "dicebear_api_avatar_generator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
